--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "timber.cpp" "tree.cpp" "tree_esp32.cpp"
+idf_component_register(SRCS "micro_timber.cpp" "tree.cpp" "tree_esp-idf.cpp"
                     INCLUDE_DIRS "include")
