--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,5 +1,5 @@
 description: Logging Framework for embedded devices
-version: 0.1.1
+version: 0.1.2+1
 
 url: https://github.com/mars3142/microtimber
 issues: https://github.com/mars3142/microtimber/issues
